Rediseño del Index y arreglo de metodos

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -2,84 +2,103 @@
 @{
     Layout = null;
 }
-
-<!DOCTYPE html>
-
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/95ab7424cb.js" crossorigin="anonymous"></script>
+    <title>LoginWeb</title>
     @Styles.Render("~/Content/css")
 </head>
 <body class="bg-dark">
-    <div id="layoutAuthentication">
-        <div id="layoutAuthentication_content">
-            <main>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-5">
-                            <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
-                                <div class="card-body">
-                                    <form action="@Url.Content("~/Login/Index")" method="post">
-                                        @Html.AntiForgeryToken()
-                                        <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputEmail" name="NCorreo" type="email" placeholder="name@example.com" @*value="pruebas@gmail.com"*@ value="admin@example.com" />
-                                            <label for="inputEmail">Correo</label>
-                                        </div>
-                                        <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputPassword" name="NContrasena" type="password" placeholder="Contraseña" @*value="12345"*@ autocomplete="off" value="admin123" />
-                                            <label for="inputPassword">Contraseña</label>
-                                        </div>
-                                        <div class="form-floating mb-3">
-                                            @{if (ViewBag.Error != null)
-                                                {
-                                                    <div class="alert alert-danger" role="alert">
-                                                        @ViewBag.Error
-                                                    </div>
-                                                }
-                                            }
-                                        </div>
-                                        <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                            <button class="btn btn-primary btn-block" type="submit">Ingresar</button>
-                                        </div>
-                                        <div class="row mt-2">
-                                            <div class="col-sm-12 text-center">
-                                                <p class="mb-0">Todos los derechos reservados ©<a id="publicidad" href="https://ouo.io/RK1tRH" target="_blank" class="ml-1"><b>Open Source - Click Aqui</b></a></p>
-                                            </div>
-                                        </div>
-                                    </form>
+        <section>
+        <div class="row g-0">
+            <div class="col-lg-7 d-none d-lg-block">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
 
-                                </div>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active min-vh-100">
 
-                                <div class="card-footer text-center py-3">
-                                    <div class="small"><a id="publicidad_cuenta" href="@Url.Action("Registrarse","Login")">Necesitas una cuenta? Registrate!</a></div>
-                                </div>
+                            <img src="~/Imagenes/Login/1.jpg" class="d-block w-100 foto" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="font-weight-bold">La más potente del mercado</h5>
+                                <a class="text-muted text-decoration-none" href="#"> Visita nuestra tienda</a>
+                            </div>
+                        </div>
+                        <div class="carousel-item min-vh-100">
+                            <img src="~/Imagenes/Login/2.jpg" class="d-block w-100 foto" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="font-weight-bold">Descubre la nueva generacion</h5>
+                                <a class="text-muted text-decoration-none" href="#"> Visita nuestra tienda</a>
                             </div>
                         </div>
                     </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </a>
                 </div>
-            </main>
-        </div>
-        <div id="layoutAuthentication_footer">
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid px-4">
-                    <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2021</div>
-                        <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+            </div>
+            <div class="col-lg-5 d-flex flex-column justify-content-around min-vh-100">
+                <!--LOGO-->
+                <div class="px-lg-5 pt-lg-4 pb-lg-3 p-4 w-100">
+                    <img src="~/Imagenes/Login/Logo.svg" class="img-fluid">
+                </div>
+                <!--FORM-->
+                <div class="px-lg-5 pt-lg-4 w-100 px-3">
+                    <h2 class="font-weight-bold mb-4">Bienvenido de vuelta</h2>
+                    <form class="mb-4" action="@Url.Content("~/Login/Index")" method="post">
+                        @Html.AntiForgeryToken()    
+                        <div class="mb-4">
+                            <label for="exampleInputEmail1" class="form-label font-weight-bold">Email</label>
+                            <input type="email" class="form-control bg-dark-x border-0 mb-2" name="NCorreo" placeholder="Ingresa tu email" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
+                        <div class="mb-4">
+                            <label for="exampleInputPassword1" class="form-label font-weight-bold">Contraseña</label>
+                            <input type="password" name="NPassword" class="form-control bg-dark-x border-0 " placeholder="Ingresa tu contraseña" id="exampleInputPassword1">
+                            </div>
+                            <a href="#" id="emailHelp" class="form-text text-decoration-none text-muted">¿Has olvidado tu contraseña?</a>
+                        
+                        <div class="mb-4">
+                            <button type="submit" class="btn btn-primary w-100">Iniciar Sesion</button>
+                        </div>
+                     </form>
+                    
+                    <p class="font-weight-bold text-center text-muted">O inicia sesión con:</p>
+                    <div class="d-flex justify-content-around">
+                        <button type="submit" class="me-2 btn btn-outline-light flex-grow-1 "><i class="fab fa-google lead me-3"></i>Google</button>
+                        <button type="submit" class="ms-2 btn btn-outline-light flex-grow-1 "><i class="fab fa-facebook-f lead me-3"></i>Facebook</button>
+                    </div>
+                    <div class="form-floating mb-2 mt-2">
+                        @{if (ViewBag.Error != null)
+                          {
+                              <div class="alert alert-danger" role="alert">
+                                  @ViewBag.Error
+                              </div>
+                          }
+                        }
                     </div>
                 </div>
-            </footer>
+                <div class="text-center px-lg-5 pt-lg-3 pb-lg-0 p-2 w-100">
+                    <p class="d-inline-block mb-2">¿Todavia no tienes una cuenta?</p><a href="@Url.Action("Registrarse","Login")" class="text-light font-weight-bold text-decoration-none d-inline-block"> Crea una ahora</a>
+                </div>
+            </div>
+
         </div>
-    </div>
+        </section>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    <script>
-
-    </script>
 </body>
 </html>
