--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/95ab7424cb.js" crossorigin="anonymous"></script>
     <title>LoginWeb</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/cssLogin")
 </head>
 <body class="bg-dark">
         <section>
@@ -53,12 +53,12 @@
             </div>
             <div class="col-lg-5 d-flex flex-column justify-content-around min-vh-100">
                 <!--LOGO-->
-                <div class="px-lg-5 pt-lg-4 pb-lg-3 p-4 w-100">
+                <div class="px-lg-5 pt-lg-4 pb-lg-2 p-4 w-100">
                     <img src="~/Imagenes/Login/Logo.svg" class="img-fluid">
                 </div>
                 <!--FORM-->
-                <div class="px-lg-5 pt-lg-4 w-100 px-3">
-                    <h2 class="font-weight-bold mb-4">Bienvenido de vuelta</h2>
+                <div class="px-lg-5 w-100 px-3">
+                    <h2 class="font-weight-bold mb-4">Bienvenido a Tienda X</h2>
                     <form class="mb-4" action="@Url.Content("~/Login/Index")" method="post">
                         @Html.AntiForgeryToken()    
                         <div class="mb-4">
@@ -75,12 +75,6 @@
                             <button type="submit" class="btn btn-primary w-100">Iniciar Sesion</button>
                         </div>
                      </form>
-                    
-                    <p class="font-weight-bold text-center text-muted">O inicia sesión con:</p>
-                    <div class="d-flex justify-content-around">
-                        <button type="submit" class="me-2 btn btn-outline-light flex-grow-1 "><i class="fab fa-google lead me-3"></i>Google</button>
-                        <button type="submit" class="ms-2 btn btn-outline-light flex-grow-1 "><i class="fab fa-facebook-f lead me-3"></i>Facebook</button>
-                    </div>
                     <div class="form-floating mb-2 mt-2">
                         @{if (ViewBag.Error != null)
                           {
@@ -89,6 +83,11 @@
                               </div>
                           }
                         }
+                    </div>
+                    <p class="font-weight-bold text-center text-muted">O inicia sesión con:</p>
+                    <div class="d-flex justify-content-around">
+                        <button type="submit" class="me-2 btn btn-outline-light flex-grow-1 "><i class="fab fa-google lead me-3"></i>Google</button>
+                        <button type="submit" class="ms-2 btn btn-outline-light flex-grow-1 "><i class="fab fa-facebook-f lead me-3"></i>Facebook</button>
                     </div>
                 </div>
                 <div class="text-center px-lg-5 pt-lg-3 pb-lg-0 p-2 w-100">
