--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -63,11 +63,11 @@
                         @Html.AntiForgeryToken()    
                         <div class="mb-4">
                             <label for="exampleInputEmail1" class="form-label font-weight-bold">Email</label>
-                            <input type="email" class="form-control bg-dark-x border-0 mb-2" name="NCorreo" placeholder="Ingresa tu email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <input type="email" class="form-control border-0 mb-2" name="NCorreo" placeholder="Ingresa tu email" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="mb-4">
                             <label for="exampleInputPassword1" class="form-label font-weight-bold">Contraseña</label>
-                            <input type="password" name="NPassword" class="form-control bg-dark-x border-0 " placeholder="Ingresa tu contraseña" id="exampleInputPassword1">
+                            <input type="password" name="NPassword" class="form-control border-0 " placeholder="Ingresa tu contraseña" id="exampleInputPassword1">
                             </div>
                             <a href="#" id="emailHelp" class="form-text text-decoration-none text-muted">¿Has olvidado tu contraseña?</a>
                         
