--- a/Views/Login/Registrarse.cshtml
+++ b/Views/Login/Registrarse.cshtml
@@ -9,17 +9,17 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Registrarse</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/cssLogin")
 </head>
-<body class="bg-dark">
+<body class="bg-dark-x">
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
             <main>
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-lg-7">
-                            <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Crear Cuenta</h3></div>
+                        <div class="col-lg-6">
+                            <div class="card shadow-lg bg-dark text-white rounded mt-5">
+                                <div class="card-header"><h3 class="text-center text-white font-weight-light my-4">Crear Cuenta</h3></div>
                                 <div class="card-body">
                                     <form action="@Url.Action("Registrarse","Login")" method="post">
                                         <div class="row mb-3">
@@ -43,13 +43,13 @@
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputPassword" name="NContrasena" type="password" placeholder="Contraseña" value="@Html.DisplayTextFor(model => model.Password)" />
+                                                    <input class="form-control" id="inputPassword" name="NPassword" type="password" placeholder="Contraseña" value="@Html.DisplayTextFor(model => model.Password)" />
                                                     <label for="inputPassword">Password</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputPasswordConfirm" name="NConfirmarContrasena" type="password" placeholder="Confirmar contraseña" value="@Html.DisplayTextFor(model => model.ConfirmarPassword)" />
+                                                    <input class="form-control" id="inputPasswordConfirm" name="NConfirmarPassword" type="password" placeholder="Confirmar contraseña" value="@Html.DisplayTextFor(model => model.ConfirmarPassword)" />
                                                     <label for="inputPasswordConfirm">Confirmar Contraseña</label>
                                                 </div>
                                             </div>
@@ -78,20 +78,6 @@
                     </div>
                 </div>
             </main>
-        </div>
-        <div id="layoutAuthentication_footer">
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid px-4">
-                    <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2021</div>
-                        <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
-                        </div>
-                    </div>
-                </div>
-            </footer>
         </div>
     </div>
     @Scripts.Render("~/bundles/jquery")
